--- a/Hw_js_18_4.html
+++ b/Hw_js_18_4.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Input</title>
 </head>
 <body>
-    
+    <label for="nameInput">Enter your name:</label>
+    <input type="text" id="nameInput" oninput="filterInput(event)" />
+    <script>
+        function filterInput(event) {
+            var input = event.target;
+            var filteredValue = input.value.replace(/\d/g, '');
+            input.value = filteredValue;
+        }
+    </script>
 </body>
 </html>
